# qwen3-coder-server

./: .gitignore  API.md  Cargo.toml  IMPLEMENTATION.md  PURE_LLAMA_CPP.md  README.md  SETUP.md  TROUBLESHOOTING.md  requirements.txt  rubox.sh  rubox_config.json  start_glm_server.sh  start_model_menu.sh  start_python_server.sh  start_qwen_server.sh  tmp.txt
Chat/: Chat_20260207_143353.md  Chat_20260207_144216.md  Chat_20260207_144326.md
Chat/sessions/session_07022026_225428/: metadata.json
Chat/sessions/session_07022026_225548/: messages.json  metadata.json
apps/rubox/: Cargo.toml  QUICKSTART.md  README.md  rubox_config.json
archive/legacy-scripts/: run_server.sh  start_qwen_server_optimized.sh
config/opencode/: opencode.recommended.json
config/server/: cerebras-qwen3.json  gemma.json  glm4.json  qwen3-vl.json
docs/: glm-llama-cpp-upgrade.md
models/: LFM2.5-1.2B-Instruct-BF16.gguf  Qwen3-128k-30B-NEO-MAX-PLUS-IQ2_M.gguf  Qwen3-VL-8B-Instruct-UD-Q6_K_XL.gguf  google_gemma-3-4b-it-Q8_0.gguf  mmproj-Qwen3VL-8B-Instruct-F16.gguf
python-server/: INDEX.md  QUICK_START.md  config.py  glm_config.py  glm_server.py  qwen3_tools.gbnf  qwen_server.py  requirements-dev.txt  requirements.txt  test_tool_calling.py  test_tool_parsing.py  tool_parser.py  verify_reliability.py
some_docs/: CEREBRAS_QWEN3_IMPLEMENTATION_TASK.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PYTHON_SERVER_SETUP.md
src/: chat.rs  commands.rs  config.rs  llm_client.rs  main.rs  multi_model.rs  prompts.rs  server_manager.rs  ui.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
(+24 files in other folders)
