[package]
name = "rubox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
colored = "2.0"

[[bin]]
name = "rubox"
path = "src/main.rs"
